<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/topping_text_view"
            style="@style/HeaderTextStyle"
            android:text="@string/topping"
            />

        <CheckBox
            android:id="@+id/whipped_cream_topping_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/chocolate_topping_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:layout_marginBottom="16dp" />



        <TextView
            android:id="@+id/textView"
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"
            />

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:onClick="decrement"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginBottom="16dp"
                />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:onClick="increment"/>
        </LinearLayout>

        <TextView
            android:id="@+id/order_text_view"
            android:text="@string/order_summary"
            style="@style/HeaderTextStyle"
            />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#000"
            android:layout_marginBottom="16dp"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:onClick="submitOrder"/>


    </LinearLayout>
</ScrollView>